Support setting string fields in structs

Co-Authored-By: Martin Pitt <martinpitt@gnome.org>

https://bugzilla.gnome.org/show_bug.cgi?id=678401